# convolutional-neural-network

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
lightning_logs/version_0/: hparams.yaml
lightning_logs/version_1/: hparams.yaml
lightning_logs/version_2/: hparams.yaml
lightning_logs/version_3/: hparams.yaml
logs/cnn_scratch/version_0/: metrics.csv
logs/resnet_feature_extractor/version_0/: metrics.csv
logs/resnet_fine_tuning/version_0/: hparams.yaml  metrics.csv
src/: cnn.py  dataset.py  lightning.py  plotting.py  pretrained.py  trainer.py
