[project]
name = "lab-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "lightning>=2.6.5",
    "matplotlib>=3.11.0",
    "optuna>=4.9.0",
    "optuna-integration>=4.9.0",
    "scipy>=1.18.0",
    "torch>=2.12.1",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.1",
]
